# test1

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: dag_config.json  scripts.py  scripts_docker.py
database/: Dockerfile  init.sql
database/queries/: init.sql  raw_json_to_parsed_product.sql  top50.sql  top_80_percent_revenue_products.sql
etl/: README.md  pyproject.toml  requirements.txt
etl/src/converter/: convert_to_json.py
etl/src/db_handler/: db.py
scripts/: Dockerfile  pyproject.toml
scripts/src/converter/: convert_to_json.py  unzip.py
scripts/src/db_handler/: call_procedure.py  create_connection.py  load_to_db.py
scripts/src/pipeline/: pipeline.py
src/converter/: convert_to_json.py
