[tool.poetry]
name = "rehub"
version = "0.1.0"
description = ""
authors = ["Fabien Gadet <fabiengadet@gmail.com>"]
readme = "README.md"
packages = [{ include = "converter", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pandas = "^2.1.4"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csv_to_json = "converter.convert_to_json:main"
json_to_db = "db_handler.db:main"
